# python-project-50

./: .coverage  .flake8  .gitignore  Makefile  README.md  coverage.xml  demo.cast  hello.py  pyproject.toml  requirements.txt  ruff.toml  test_script.py
.github/workflows/: python-app.yml  sonar-project.properties
gendiff/: __init__.py  file_parser.py  generate_diff.py
gendiff/formatters/: json.py  plain.py  stylish.py
gendiff/scripts/: cli.py
hexlet_code.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_gendiff.py  test_gendiff_recursive.py  test_gendiff_recursive_yaml.py  test_gendiff_yaml.py  test_json.py  test_plain.py
tests/fixtures/: expected_nested.txt
tests/fixtures/nested/: expected_nested.txt  expected_nested_plain.txt  nested1.json  nested2.json
