[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hexlet-code"
version = "0.1.0"
description = "Generate differences between two files"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.3.0",
    "flake8>=6.0",
    "coverage>=7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["gendiff*"]

[tool.pytest.ini_options]
addopts = "--cov=gendiff --cov-report=term-missing"

[project.scripts]
gendiff = "gendiff.scripts.cli:main"